microservice-k8s-migration/k8s/03-auth-deployment.yaml
# k8s/03-auth-deployment.yaml
# Define el Deployment y el Service para el microservicio de autenticación.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: microservices-ns
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-service
          image: auth-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
# Service de tipo ClusterIP para el microservicio de autenticación.
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservices-ns
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
